14328 cscope-fast: this 'if' clause does not guard... Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>